--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -1,4 +1,13 @@
 
+/* Fonts */
+
+@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700');
+
+$titleFontFamily: "Quicksand", sans-serif;
+$titleFontWeight: 400;
+	
+$bodyFontFamily: "Arial", sans-serif;
+
 /* Colours */
 
 $yellow: #F7D518;
