--- a/source/sass/_typography.scss
+++ b/source/sass/_typography.scss
@@ -52,3 +52,21 @@ body {
 	font-family: $bodyFontFamily;
 
 }
+
+header {
+
+	h1 {
+
+		font-size: 7em;
+
+
+	}
+
+	span {
+
+		font-size: 3em;
+		color: $yellow;
+
+	}
+
+}
