--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -82,7 +82,7 @@ label {
 section {
 
 	background: rgba($black, 0.65);
-	margin: 30px 0;
+	margin: 30px 0 0;
 	padding: 30px 0;
 
 	.container {
@@ -113,11 +113,17 @@ canvas {
 
 }
 
+header {
+
+	text-align: center;
+
+}
+
 .brand {
 
 	display: block;
 	margin: 0 auto;
-	width: 30%;
+	width:  15%;
 
 	@media (max-width: $mobileLarge) {
 
