--- a/source/sass/_article.scss
+++ b/source/sass/_article.scss
@@ -20,9 +20,37 @@
 
 		}
 
-		p {
+		ul {
 
 			font-size: 2em;
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+
+			li {
+
+				display: inline-block;
+
+				&:last-child {
+
+					padding: 0;
+
+				}
+
+				&:after {
+
+					content: " | ";
+					padding: 0 5px;
+
+				}
+
+				&:last-child:after {
+
+					content: "";
+
+				}
+
+			}
 
 		}
 
