--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -35,4 +35,5 @@ $desktop: 1920px;
 $laptop: 1440px;
 $tabletLandscape: 1024px;
 $tabletPortrait: 768px;
-$mobileLarge: 425px;
+$mobileLargeLandscape: 736px;
+$mobileLargePortrait: 425px;
