--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,7 +20,7 @@ body {
 	color: $white;
 	min-height: 100vh;
 
-	@media (max-width: $mobileLarge) {
+	@media (max-width: $mobileLargePortrait) {
 
 		padding-top: 70px;
 
@@ -142,7 +142,7 @@ blockquote {
 
 	}
 
-	@media screen and (max-width: $mobileLarge) {
+	@media screen and (max-width: $mobileLargePortrait) {
 		display: block;
 		width: 100%;
 	}
@@ -161,9 +161,9 @@ iframe {
 	margin: 0 auto;
 	width:  10%;
 
-	@media (max-width: $mobileLarge) {
+	@media (max-width: $mobileLargePortrait) {
 
-		width: 100%;
+		width: 50%;
 
 	}
 
