--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -28,6 +28,7 @@ $fastTransition: all 0.3s;
 /* Backgrounds */
 
 $purpleGradient: linear-gradient(135deg, #37005e 0%, #bc6cf4 100%);
+$blackGradient: linear-gradient(135deg, #000000 0%, #333333 100%);
 
 /* Screen sizes */
 
