--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,7 +13,7 @@
 body {
 
 	background: $darkPurple;
-	background: $purpleGradient;
+	background: $blackGradient;
 	padding-top: 80px;
 	overflow-x: hidden;
 	text-align: justify;
@@ -121,8 +121,8 @@ blockquote {
 	margin: 0 0 0 15px;
 	line-height: 1.3em;
 	text-align: center;
-	color: $darkPurple;
-	border-left: 5px solid $darkPurple;
+	color: $gray;
+	border-left: 5px solid $gray;
 
 	&:before {
 
